<?xml version="1.0"?>
<package format="2">
	<name>orb_slam2</name>
	<version>0.0.0</version>
	<description>orb_slam2</description>
	<author>Raul Mur-Artal</author>
	<maintainer email="todo@todo.todo">TODO</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>cmake_modules</build_depend>
	<build_depend>std_msgs</build_depend>
	<!-- <build_depend>custom_msgs</build_depend> -->

	<!-- <exec_depend>custom_msgs</exec_depend> -->
	<exec_depend>roscpp</exec_depend>
	<exec_depend>cv_bridge</exec_depend>

</package>
