<?xml version="1.0"?>
<package format="2">
  <name>test</name>
  <version>1.0.0</version>
  <description>test package</description>

  <maintainer email="asdasdf@gmail.com">asdasdf</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

   <exec_depend>roscpp</exec_depend>


</package>
